mule-user-guide/v/3.7/jetty-transport-reference.adoc
= Jetty Transport
:keywords: mule, esb, studio, jetty, SSL

The Jetty transport provides support for exposing applications over HTTP by embedding a light-weight Jetty server. The link:/mule-user-guide/v/3.7/jetty-ssl-transport[Jetty SSL Transport] works the same way but over SSL. You can only define inbound endpoints with this transport.

The Javadoc for this transport can be found below:

http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/transport/servlet/jetty/JettyHttpConnector.html[Jetty Transport Javadoc]

The connector allows Mule to expose Mule Services over HTTP using a Jetty HTTP server. A single Jetty server is created for each connector instance. One connector can serve many endpoints. Users should rarely need to have more than one Jetty connector. The Jetty connector can be configured using a Jetty XML config file, but the default configuration is sufficient for most scenarios.

== Attributes of the Connector

These attributes are for the optional global connector, jetty:connector.

[cols="30a,70a",options="header"]
|===
|Name |Description
|name |The name of the connector that can be referenced in a flow.

*Type*: string +
*Required*: yes +
*Default*: Jetty
|configFile |The location of the Jetty config file to configure this connector with.

*Type*: string +
*Required*: no +
*Default*: none
|Acceptors |The number of acceptor threads.

*Type*: integer +
*Required*: no +
*Default*: 1
|resourceBase |Specifies a local path where files are served from. The local path gets mapped directly to the path on the 'serverUrl'.

*Type*: string +
*Required*: no +
*Default*: none
|useContinuations |Whether to use continuations to free up connections in high load situations.

*Type*: boolean +
*Required*: no +
*Default*: none
|doc:name |A descriptive name for the connector. Not required in Mule Standalone configuration.

*Type*: string +
*Required*: Only for Studio configurations +
*Default*: Jetty
|===

== Child Elements of the Connector

[cols="20a,20a,60a",options="header"]
|===
|Name |Cardinality |Description
|webapps |0..1 |Allows configuring of a directory which contains WAR files to be served out by Jetty.
|===

== Endpoints

Jetty endpoints are configured the same way as link:/mule-user-guide/v/3.7/file-transport-reference[FTP endpoints]. Note that the Jetty transport can only be used for inbound endpoints.

For example:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:jetty="http://www.mulesoft.org/schema/mule/jetty" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/jetty http://www.mulesoft.org/schema/mule/jetty/current/mule-jetty.xsd">
    <flow name="somethingFlow1" doc:name="somethingFlow1">
        <jetty:inbound-endpoint exchange-pattern="request-response" address="http://localhost:8081/path" doc:name="Jetty"/>
    </flow>
</mule>
----

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
